--- a/src/performance-tracking/config/tig/docker-compose.yml
+++ b/src/performance-tracking/config/tig/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       - 8086:8086
     hostname: influxdb
     environment:
-      INFLUX_DB: $INFLUX_DB  # nom de la base de données créée à l'initialisation d'InfluxDB
-      INFLUXDB_USER: $INFLUXDB_USER  # nom de l'utilisateur pour gérer cette base de données
-      INFLUXDB_USER_PASSWORD: $INFLUXDB_USER_PASSWORD  # mot de passe de l'utilisateur pour gérer cette base de données
+      INFLUX_DB: $INFLUX_DB  # database name
+      INFLUXDB_USER: $INFLUXDB_USER  # user name
+      INFLUXDB_USER_PASSWORD: $INFLUXDB_USER_PASSWORD  # user password
       DOCKER_INFLUXDB_INIT_MODE: $DOCKER_INFLUXDB_INIT_MODE
       DOCKER_INFLUXDB_INIT_USERNAME: $DOCKER_INFLUXDB_INIT_USERNAME
       DOCKER_INFLUXDB_INIT_PASSWORD: $DOCKER_INFLUXDB_INIT_PASSWORD
@@ -19,34 +19,30 @@ services:
       DOCKER_INFLUXDB_INIT_RETENTION: $DOCKER_INFLUXDB_INIT_RETENTION
       DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: $DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
     volumes:
-      - ./influxdb:/var/lib/influxdb  # volume pour stocker la base de données InfluxDB
+      - ./influxdb:/var/lib/influxdb  # volume to store the InfluxDB database
 
   telegraf:
     image: telegraf
     depends_on:
-      - influxdb  # indique que le service influxdb est nécessaire
+      - influxdb  # indicate that influxdb is necessary
     container_name: telegraf
     restart: always
     links:
       - influxdb:influxdb
     tty: true
     volumes:
-      - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf  # fichier de configuration de Telegraf
-      - /:/hostfs:ro
-      - /var/run/docker.sock:/var/run/docker.sock 
-      - /usr/bin/nvidia-smi:/usr/bin/nvidia-smi
-    environment:
-      HOST_PROC: "/hostfs/proc"
-      HOST_MOUNT_PREFIX: "/hostfs"
+      - /var/run/docker.sock:/var/run/docker.sock  # necessary to fetch data from the Docker daemon
+      - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf  # configuration file for Telegraf
+      - /:/host:ro # necessary to fetch data from host (processes, threads...)
 
   grafana:
     image: grafana/grafana-oss
     depends_on:
-      - influxdb  # indique que le service influxdb est nécessaire
+      - influxdb  # indicate that influxdb is necessary
     container_name: grafana
     restart: always
     ports:
-      - 9090:3000  # port pour accéder à l'interface web de Grafana
+      - 9090:3000  # port to access the web interface of Grafana
     links:
       - influxdb:influxdb
     environment:
@@ -56,7 +52,7 @@ services:
                           grafana-piechart-panel,\
                           grafana-simple-json-datasource,\
                           grafana-worldmap-panel"
-      GF_SECURITY_ADMIN_USER: $GF_SECURITY_ADMIN_USER  # nom de l'utilisateur créé par défaut pour accéder à Grafana
-      GF_SECURITY_ADMIN_PASSWORD: $GF_SECURITY_ADMIN_PASSWORD  # mot de passe de l'utilisateur créé par défaut pour accéder à Grafana
+      GF_SECURITY_ADMIN_USER: $GF_SECURITY_ADMIN_USER  # user name for Grafana
+      GF_SECURITY_ADMIN_PASSWORD: $GF_SECURITY_ADMIN_PASSWORD  # user password for Grafana
     volumes:
       - ./grafana:/var/lib/grafana-oss
